Fix month label alignment

--- a/indico/web/client/js/custom_elements/ind_date_picker.scss
+++ b/indico/web/client/js/custom_elements/ind_date_picker.scss
@@ -16,6 +16,8 @@ ind-date-picker {
   align-items: flex-start;
   position: relative;
 
+  text-align: left;
+
   > input {
     padding-right: 2.5em;
   }
@@ -47,6 +49,8 @@ ind-date-picker {
 
 ind-date-range-picker {
   position: relative;
+
+  text-align: left;
 
   fieldset {
     display: flex;
